tests/invalid/list_sort_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [2, 1]
    xs.sort(1)


if __name__ == "__main__":
    run_case()
